# tradeoff_vae_uad

./: README.md  pyproject.toml
mvae_ad/: compute_distance_latent_distributions.py  train_vae.py
mvae_ad/analysis/: look_at_difference_between_mean_and_samples.py  look_at_posteriors_variances.py  project_embeddings.py  reconstruction_error_per_pixel_values.py  sparse_vae_active_dimensions.py
mvae_ad/architectures/: __init__.py  architectures_2d.py  architectures_3d.py  covariates_networks.py
mvae_ad/configs/configs_eval_scripts/: config.yaml
mvae_ad/configs/configs_training/: config.yaml
mvae_ad/configs/configs_training/architecture/: 2d_conv.yaml  3d_conv.yaml
mvae_ad/configs/configs_training/data/: pet_adni.yaml
mvae_ad/configs/configs_training/data/extraction/: 2d.yaml  3d.yaml
mvae_ad/configs/configs_training/eval/: base.yaml
mvae_ad/configs/configs_training/model/: cvae.yaml  sparse.yaml
mvae_ad/configs/configs_training/paths/: local_AS.yaml  local_MS.yaml
mvae_ad/configs/configs_training/trainer/: base.yaml  beta_scheduling.yaml  beta_scheduling_linear.yaml
mvae_ad/data/: caps_multimodal_dataset.py  dataset_handler.py  tensor_conversion.py  transforms.py  utils.py
mvae_ad/metrics/: compare_embedding_dists.py  grid_searches.py  metrics.py  utils.py
mvae_ad/model/: generate_healthy.py  utils.py
mvae_ad/plots/sparse_vae_versus_beta_vae/: table_compare.ipynb  wasserstein_plots.ipynb
mvae_ad/plots/tradeoff_reconstruction_detection/: tradeoff_reconstruction_detection.ipynb
mvae_ad/trainers/: __init__.py  caps_trainer.py  utils.py
(+7 files in other folders)
